--- a/Draw/Controller/Common/CommonMessageView.xib
+++ b/Draw/Controller/Common/CommonMessageView.xib
@@ -42,7 +42,7 @@
 						<string key="NSFrameSize">{375, 171}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="887364720"/>
+						<reference key="NSNextKeyView" ref="838159615"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -51,13 +51,13 @@
 							<string key="NSResourceName">dialogue@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="887364720">
+					<object class="IBUIImageView" id="838159615">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{57, 65}, {61, 61}}</string>
+						<string key="NSFrame">{{48, 65}, {61, 61}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1012661553"/>
+						<reference key="NSNextKeyView" ref="16459004"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -66,10 +66,10 @@
 							<string key="NSResourceName">face_wry@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUILabel" id="1012661553">
+					<object class="IBUILabel" id="16459004">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{163, 65}, {143, 61}}</string>
+						<string key="NSFrame">{{117, 65}, {238, 61}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -92,6 +92,7 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUINumberOfLines">2</int>
+						<int key="IBUITextAlignment">1</int>
 						<int key="IBUILineBreakMode">0</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
@@ -121,7 +122,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">faceImageView</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="887364720"/>
+						<reference key="destination" ref="838159615"/>
 					</object>
 					<int key="connectionID">6</int>
 				</object>
@@ -129,7 +130,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">messageLabel</string>
 						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="1012661553"/>
+						<reference key="destination" ref="16459004"/>
 					</object>
 					<int key="connectionID">7</int>
 				</object>
@@ -147,8 +148,8 @@
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="368008694"/>
-							<reference ref="1012661553"/>
-							<reference ref="887364720"/>
+							<reference ref="16459004"/>
+							<reference ref="838159615"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -170,12 +171,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="887364720"/>
+						<reference key="object" ref="838159615"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="1012661553"/>
+						<reference key="object" ref="16459004"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
